[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art Assets_Attic.png" type="Texture" id=1]
[ext_resource path="res://SubRoom.gd" type="Script" id=2]
[ext_resource path="res://Boy.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionPolygon2D.gd" type="Script" id=4]
[ext_resource path="res://Area2D.gd" type="Script" id=5]
[ext_resource path="res://CollisionShape2D.gd" type="Script" id=6]
[ext_resource path="res://Art Assets_Sister.png" type="Texture" id=7]
[ext_resource path="res://Sister.gd" type="Script" id=8]
[ext_resource path="res://Achievement.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="AtlasTexture" id=2]

flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 160, 440 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 60, 130 )

[sub_resource type="Animation" id=4]

resource_name = "Popup"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 450 ), Vector2( 0, 270 ), Vector2( 0, 270 ), Vector2( 0, 450 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Stay"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 450 ) ]
}

[node name="Attic" type="Sprite"]

position = Vector2( 655.093, 360 )
scale = Vector2( 1.02358, 1 )
z_index = -1
z_as_relative = false
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="KinematicBody2D" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( -490, 150 )
speed = 600

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D" index="0"]

position = Vector2( -640, -360 )
build_mode = 0
polygon = PoolVector2Array( 0, 650, -100, 650, -100, -100, 1380, -100, 1380, 820, -100, 800, -100, 650, 1100, 650, 1100, 370, 0, 370 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

position = Vector2( -621.313, 142.659 )
scale = Vector2( 0.42773, 3.80184 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

editor/display_folded = true
position = Vector2( 0, 0.479753 )
scale = Vector2( 1, 1.91418 )
shape = SubResource( 1 )
script = ExtResource( 6 )

[node name="Art Assets_Sister" type="Sprite" parent="." index="3"]

position = Vector2( -15, 120 )
z_index = 1
texture = SubResource( 2 )
script = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="Art Assets_Sister" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Art Assets_Sister/Area2D" index="0"]

position = Vector2( 0, 30 )
shape = SubResource( 3 )
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Achievement" type="Sprite" parent="." index="4"]

position = Vector2( 0, 450 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Achievement" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Popup = SubResource( 4 )
anims/Stay = SubResource( 5 )
blend_times = [  ]

[connection signal="on_enable" from="." to="Area2D/CollisionShape2D" method="enable"]

[connection signal="on_enable" from="." to="KinematicBody2D" method="enable"]

[connection signal="on_enable" from="." to="Art Assets_Sister/Area2D/CollisionShape2D" method="enable"]

[connection signal="on_enable" from="." to="StaticBody2D/CollisionPolygon2D" method="enable"]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]

[connection signal="on_exit_room" from="Area2D" to="." method="_door_on_exit"]

[connection signal="body_entered" from="Art Assets_Sister/Area2D" to="Art Assets_Sister" method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Art Assets_Sister/Area2D" to="Art Assets_Sister" method="_on_Area2D_body_exited"]


